2002-08-22  Matti Aarnio  <mea@zmailer.org>

	* proto/post-install.sh.in:
	    Changed behaviour rules a bit.
	    Now the prototype of whatever there are prototypes of
	    will be kept in its original place, and only copies
	    will be made.

	* lib/sleepycatdb.c:
	    Spotted a bug in database opening error handling.

2002-08-19  Matti Aarnio  <mea@zmailer.org>

	* transports/smtp/smtp.c:
	    Changed logtag() returned tag-string format.
	    New one will tell time (in secs) since start of
	    the program, and incremental sequence number.

	* proto/post-install.sh:
	    Having been asked ... printing more verbose progress
	    reporting while doinga POSTOFFICE subdirectories.

	* smtpserver/smtpauth.c, smtpserver/smtpcmds.c,
	  smtpserver/smtpserver.c, smtpserver/smtpserver.h:
	    Format change in the verbose protocol log tags.

2002-08-12  Matti Aarnio  <mea@zmailer.org>

	* transports/smtp/smtp.c:
	    In some cases the  smtp_sync()  is called when outbound write
	    socket has already been killed.

	* proto/newdbprocessor.in:
	    Updated internal comment carried documentation, and
	    sample of  dbases.conf  in the script.

	* proto/db/dbases.conf:
	    Documented the existence of "-r" as newdb_compile_option.

2002-07-11  Matti Aarnio  <mea@zmailer.org>

	* sfio2002/*
	    Entire subtree -- SFIO version 2002.1
	    Basic injection, no adaptations yet.

	* include/libz.h, lib/selfaddrs.c, lib/zgetifaddress.c,
	  router/libdb/selfmatch.c, smtpserver/mxverify.c, 
	  smtpserver/policytest.c, smtpserver/smtpserver.h,
	  transports/smtp/smtp.c, transports/smtp/smtp.h:
	    Moving commonly used 'Usockaddr' type into libz.h,
	    and updating interfaces playing with addresses to
	    use that type for the parameters.

	* proto/smtpserver.conf.in, smtpserver/cfgread.c:
	    Eugene Crosser noticed that binding to named interface
	    does not quite succeed..  Address storage goes into
	    slightly wrong place -> binding fails.
