@@ -1,3 +1,15 @@
+2002-08-23  Matti Aarnio  <mea@zmailer.org>
+
+	* man/smtpserver.c, smtpserver/contentpolicy.c,
+	  utils/smtp-contentfilter.in, README.UPGRADING:
+	    A change in the  smtpserver <-> contentfilter
+	    interface protocol!  Some users have written
+	    content-filters based on the sample framework,
+	    and those will need matching changes (rather
+	    simple!) in the filter code!  See  README.UPGRADING !
+	    *** THIS CODE DOES NEED FURTHER TESTING, AS OF YET
+	    *** IT IS CONSIDERED ALPHA QUALITY...
+
 2002-08-22  Matti Aarnio  <mea@zmailer.org>
 
 	* proto/post-install.sh.in:
